ThoughtLog: Thought endpoints.
* Implemented rest api's for show, update and deletion
  of a thought.
